# ChangeLog for app-text/gnopaster
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/gnopaster/ChangeLog,v 1.1 2007/04/24 10:44:52 jurek Exp $

*gnopaster-0.0.6 (24 Apr 2007)

  24 Apr 2007; Jurek Bartuszek <jurek@gentoo.org> +metadata.xml,
  +gnopaster-0.0.6.ebuild:
  Initial version (fixes bug #101417).
