@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnopaster/gnopaster-0.0.6.ebuild,v 1.2 2007/04/24 13:27:30 jurek Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnopaster/gnopaster-0.0.6.ebuild,v 1.3 2007/04/25 02:32:26 jurek Exp $
 
 DESCRIPTION="A submitter for gnopaste, a nopaste service like http://nopaste.info"
 HOMEPAGE="http://gnopaste.sf.net"
@@ -8,12 +8,12 @@ SRC_URI="mirror://sourceforge/gnopaste/${P}.pl.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="~x86 ~amd64"
 IUSE=""
 
 DEPEND="dev-lang/perl
 	dev-perl/libwww-perl
-	dev-perl/ConfigReader"
+	dev-perl/Config-Simple"
 
 src_install() {
 	dobin ${WORKDIR}/${P}.pl
