@@ -1,6 +1,10 @@
 # ChangeLog for app-text/gnopaster
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gnopaster/ChangeLog,v 1.1 2007/04/24 10:44:52 jurek Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gnopaster/ChangeLog,v 1.2 2007/04/25 02:32:26 jurek Exp $
+
+  25 Apr 2007; Jurek Bartuszek <jurek@gentoo.org> gnopaster-0.0.6.ebuild:
+  - Added ~amd64 keyword
+  - Changed dev-perl/ConfigReader dependency to dev-perl/Config-Simple
 
 *gnopaster-0.0.6 (24 Apr 2007)
 
